[project]
name = "rpa_afgoerelsesbreve"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "openpyxl >= 3.1.2",
  "mbu_msoffice_integration>=1.0.1",
  "mbu-dev-shared-components[solteqtand]>=4.3.0",
  "mbu-rpa-core",
  "automation-server-client @ git+https://github.com/odense-rpa/automation-server-client.git",
  "pillow",
  "ruff",
  "sqlalchemy >= 2.0.20",
  "sqlalchemy[asyncio] >= 2.0.20",
  "requests",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.1" }

[tool.setuptools]
py-modules = []